--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ timezone: Africa/Cairo
 
 title: LaCryptora # the main title
 
-tagline: "La voz secreta en seguridad y writeups" # it will display as the subtitle
+tagline: "Break. Learn. Share." # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
    Break. Learn. Share.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://lacryptora.xyz"
+url: "https://lacryptora.github.io"
 
 github:
   username: lacryptora # change to your GitHub username
@@ -53,29 +53,30 @@ social:
   #baidu: # fill in your Baidu verification code
   #facebook: # fill in your Facebook verification code
 
+google_site_verification: # fill in to your verification string
+
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
 # Web Analytics Settings
-analytics:
-  google:
+google_analytics:
     id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
+  #goatcounter:
+   # id: # fill in your GoatCounter ID
   #umami:
    # id: # fill in your Umami ID
     #domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-  fathom:
-    id: # fill in your Fathom Site ID
+  #matomo:
+   # id: # fill in your Matomo ID
+    #domain: # fill in your Matomo domain
+  #cloudflare:
+   # id: # fill in your Cloudflare Web Analytics token
+  #fathom:
+   # id: # fill in your Fathom Site ID
 
 # Page views settings
-pageviews:
-  provider: # now only supports 'goatcounter'
+#pageviews:
+ # provider: # now only supports 'goatcounter'
 
 # Prefer color scheme setting.
 #
@@ -98,18 +99,18 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/avatar.jpg"
+avatar: "/assets/img/avatar.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+#social_preview_image: # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: giscus # [disqus | utterances | giscus]
+  active: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -152,7 +153,8 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
-
+plugins:
+  - jemoji
 # ------------ The following options are not recommended to be modified ----------------
 
 kramdown:
@@ -216,6 +218,10 @@ defaults:
       layout: page
       permalink: /:title/
   - scope:
+      path: assets/img/favicons
+    values:
+      swcache: true
+  - scope:
       path: assets/js/dist
     values:
       swcache: true
@@ -239,9 +245,10 @@ exclude:
   - tools
   - README.md
   - LICENSE
-  - purgecss.js
-  - "*.config.js"
-  - "package*.json"
+ # - purgecss.js
+  - rollup.config.js
+  - package*.json
+ # - "*.sh"
 
 jekyll-archives:
   enabled: [categories, tags]
