--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,16 +2,15 @@
 
 - type: github
   icon: "fab fa-github"
-  url: "https://github.com/lacryptora"
+   url: "https://github.com/lacryptora"
 
 - type: twitter
   icon: "fa-brands fa-x-twitter"
    url: "https://x.com/lacryptora"
   
-
 - type: linkedin
-   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-   url:  'https://www.linkedin.com/in/shaimaa-khattab/'                  # Fill with your Linkedin homepage
+   icon: "fab fa-linkedin"  # icons powered by <https://fontawesome.com/>
+    url: "https://www.linkedin.com/in/shaimaa-khattab"                # Fill with your Linkedin homepage
 
 #- type: email
  # icon: "fas fa-envelope"
