--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://lacryptora.github.io"
+url: ""
 
 github:
   username: lacryptora # change to your GitHub username
@@ -40,27 +40,25 @@ social:
     # The first element serves as the copyright owner's link
     - https://twitter.com/lacryptora # change to your Twitter homepage
     - https://github.com/lacryptora # change to your GitHub homepage
+    - https://www.linkedin.com/in/shaimaa-khattab
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - https://www.linkedin.com/in/shaimaa-khattab
-
 # Site Verification Settings
-#webmaster_verifications:
-  #google: # fill in your Google verification code
-  #bing: # fill in your Bing verification code
-  #alexa: # fill in your Alexa verification code
-  #yandex: # fill in your Yandex verification code
-  #baidu: # fill in your Baidu verification code
-  #facebook: # fill in your Facebook verification code
-
-google_site_verification: # fill in to your verification string
+webmaster_verifications:
+  google: # fill in your Google verification code
+  bing: # fill in your Bing verification code
+  alexa: # fill in your Alexa verification code
+  yandex: # fill in your Yandex verification code
+  baidu: # fill in your Baidu verification code
+  facebook: # fill in your Facebook verification codestring
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
 # Web Analytics Settings
-google_analytics:
-    id: # fill in your Google Analytics ID
+analytics:
+  google:
+    id: "G-5CDS3F4LDT" # fill in your Google Analytics ID
   #goatcounter:
    # id: # fill in your GoatCounter ID
   #umami:
@@ -103,33 +101,35 @@ avatar: "/assets/img/avatar.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-#social_preview_image: # string, local or CORS resources
+social_preview_image: "/assets/img/avatar.jpg" # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  active: giscus # [disqus | utterances | giscus]
+  provider: "giscus" # [disqus | utterances | giscus]
   # The provider options are as follows:
-  disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  #disqus:
+    #shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
-  utterances:
-    repo: lacrypto/lacrypto.github.io # <gh-username>/<repo>
-    issue_term: pathname # < url | pathname | title | ...>
-  # Giscus options › https://giscus.app
-  giscus:
-    repo: lacrypto/lacrypto.github.io
-    repo_id: 1059738754
+  #utterances:
+   # repo: lacrypto/lacrypto.github.io # <gh-username>/<repo>
+    #issue_term: pathname # < url | pathname | title | ...>
+  
 
-    category: Announcements
-    category_id: 46041789
-    mapping: pathname # optional, default to 'pathname'
-    strict: 0 # optional, default to '0'
-    input_position: 'bottom' # optional, default to 'bottom'
+# Giscus options › https://giscus.app
+  giscus:
+    repo: "lacrypto/lacrypto.github.io"
+    repo_id: "R_kgDOPypUgg"
+    category: "General"
+    category_id: "DIC_kwDOPypUgs4Cvoq9"
+    mapping: "title" # optional, default to 'pathname'
+    strict: "1" # optional, default to '0'
+    input_position: "top" # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
-    reactions_enabled: 1 # optional, default to the value of `1`
+    reactions_enabled: "1" # optional, default to the value of `1`
+    crossorigin: "anonymous"
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -153,7 +153,7 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
-plugins:
+#plugins:
   - jemoji
 # ------------ The following options are not recommended to be modified ----------------
 
@@ -164,7 +164,7 @@ kramdown:
     css_class: highlight
     # default_lang: console
     span:
-      line_numbers: true
+      line_numbers: false
     block:
       line_numbers: true
       start_line: 1
@@ -212,19 +212,19 @@ defaults:
     values:
       comments: false
   - scope:
-      path: _tabs/about.md
+      path: ""
       type: tabs # see `site.collections`
     values:
       layout: page
       permalink: /:title/
-  - scope:
-      path: assets/img/favicons
-    values:
-      swcache: true
-  - scope:
-      path: assets/js/dist
-    values:
-      swcache: true
+  #- scope:
+   #   path: assets/img/favicons
+    #values:
+     # swcache: true
+  #- scope:
+   #   path: assets/js/dist
+    #values:
+     # swcache: true
 
 sass:
   style: compressed
@@ -247,7 +247,7 @@ exclude:
   - LICENSE
   - purgecss.js
   - rollup.config.js
-  - package*.json
+  - "package*".json
  # - "*.sh"
 
 jekyll-archives:
