--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,6 @@
 
 remote_theme: cotes2020/jekyll-theme-chirpy
 
-
-remote_theme: cotes2020/jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
@@ -17,7 +15,7 @@ timezone: Africa/Cairo
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: La Cryptora # the main title
+title: Shaimaa Khattab # the main title
 
 tagline: "Break. Learn. Share." # it will display as the subtitle
 
@@ -160,20 +158,13 @@ baseurl: ""
 #plugins:
  # - jemoji
 plugins:
-=======
-plugins:
   - jemoji
->>>>>>> a8efb09459dbc1573edbdbc1650d3397661a8145
   - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-archives
-<<<<<<< HEAD
- 
-=======
->>>>>>> a8efb09459dbc1573edbdbc1650d3397661a8145
 # ------------ The following options are not recommended to be modified ----------------
 
 kramdown:
