--- a/_config.yml
+++ b/_config.yml
@@ -249,7 +249,6 @@ exclude:
   - "*.gem"
   - "*.gemspec"
   - docs
-  - tools
   - README.md
   - LICENSE
   - purgecss.js
@@ -267,8 +266,7 @@ exclude:
   - .stylelintrc.json
   - .markdownlint.json
   - jekyll-theme-chirpy.gemspec
-
-
+  - vendor
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
