--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ theme: jekyll-theme-chirpy
 # otherwise, the layout language will use the default value of 'en'.
 lang: en
 
-# Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
+# Change to your timezone › https://kevalbhatt.github.io/timezone-picker/
+# e.g. 'Asia/Shanghai', 'America/New_York', etc.
 timezone:
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
